# Android-AudioRecorder-Mp3Encoder

./: .gitignore  README.md
app/: .gitignore  build.gradle
app/src/androidTest/java/com/phuket/tour/audiorecorder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/phuket/tour/audiorecorder/: AudioRecorderActivity.java  MainActivity.java  MyApplication.java
app/src/main/java/com/phuket/tour/audiorecorder/recorder/: AudioConfigurationException.java  AudioRecordRecorderService.java  StartRecordingException.java
app/src/main/java/com/phuket/tour/studio/: LameMp3Encoder.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
app/src/main/jni/common/: CommonTools.h
app/src/main/jni/lame_mp3_encoder/: Android.mk
app/src/main/jni/lame_mp3_encoder/include/: com_phuket_tour_studio_LameMp3Encoder.h  lame_mp3_encoder.h
app/src/main/jni/lame_mp3_encoder/src/: AudioEncoder.cpp  lame_mp3_encoder.cpp
app/src/main/jni/mp3_encoder/: Android.mk
app/src/main/jni/mp3_encoder/include/: mp3_encoder.h
app/src/main/jni/mp3_encoder/jni/: AudioEncoder.cpp
app/src/main/jni/mp3_encoder/src/: AudioEncoder.cpp  mp3_encoder.cpp
app/src/main/res/layout/: activity_audio_recorder.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/phuket/tour/audiorecorder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
